--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "prettier:check": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\"",
     "lint-prettier": "yarn lint:check && yarn prettier:check"
   },
+  "lint-staged": {
+    "src/**/*.ts": "yarn lint-prettier"
+  },
   "keywords": [],
   "author": "hasibmiraz",
   "license": "ISC",
@@ -21,6 +24,7 @@
     "eslint": "^8.41.0",
     "eslint-config-prettier": "^8.8.0",
     "husky": "^8.0.3",
+    "lint-staged": "^13.2.2",
     "prettier": "^2.8.8",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.4"
