--- a/.eslintrc
+++ b/.eslintrc
@@ -12,8 +12,11 @@
   ],
 
   "rules": {
-    "@typescript-eslint/no-unused-vars": "error",
-    // to enforce using type for object type definitions, can be type or interface
+    "no-unused-vars": "error",
+    "no-console": "error",
+    "no-undef": "error",
+    "no-unused-expressions": "error",
+    "no-unreachable": "error",
     "@typescript-eslint/consistent-type-definitions": ["error", "type"]
   },
 
