--- a/.eslintrc
+++ b/.eslintrc
@@ -4,6 +4,9 @@
     "ecmaVersion": 13,
     "sourceType": "module"
   },
+  "globals": {
+    "process": "readonly"
+  },
   "plugins": ["@typescript-eslint"],
   "extends": [
     "eslint:recommended",
