--- a/.eslintrc
+++ b/.eslintrc
@@ -1,11 +1,8 @@
 {
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "ecmaVersion": 13,
+    "ecmaVersion": 12,
     "sourceType": "module"
-  },
-  "globals": {
-    "process": "readonly"
   },
   "plugins": ["@typescript-eslint"],
   "extends": [
@@ -13,18 +10,20 @@
     "plugin:@typescript-eslint/recommended",
     "prettier"
   ],
-
   "rules": {
     "no-unused-vars": "error",
-    "no-console": "error",
-    "no-undef": "error",
+    "prefer-const": "error",
     "no-unused-expressions": "error",
-    "no-unreachable": "error",
+    "no-undef": "error",
+    "no-console": "warn",
     "@typescript-eslint/consistent-type-definitions": ["error", "type"]
   },
-
   "env": {
     "browser": true,
-    "es2021": true
+    "es2021": true,
+    "node": true
+  },
+  "globals": {
+    "process": "readonly"
   }
 }
